Modelländringar för tacklebox

--- a/MeasureMyPike.Domain/App.config
+++ b/MeasureMyPike.Domain/App.config
@@ -6,7 +6,7 @@
   </configSections>
   <connectionStrings>
     <!-- <add name="ModelContainer" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;attachdbfilename=|DataDirectory|\MeasureMyPike.mdf;integrated security=True;connect timeout=30;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />  -->
-    <add name="ModelContainer" connectionString="metadata=res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModelContainer" connectionString="metadata=res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
