--- a/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
+++ b/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
@@ -102,6 +102,9 @@
     <Compile Include="Models\StatisticsDO.cs">
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Models\TackleBoxDO.cs">
+      <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\UserDO.cs">
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
     </Compile>
