Starting with AddCatch and the VO that is input from REST

--- a/MeasureMyPike.Application/MeasureMyPike.Application.csproj
+++ b/MeasureMyPike.Application/MeasureMyPike.Application.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Interfaces\IUserService.cs" />
     <Compile Include="Models\Brand.cs" />
     <Compile Include="Models\Catch.cs" />
+    <Compile Include="Models\CatchInputVO.cs" />
     <Compile Include="Models\Comment.cs" />
     <Compile Include="Models\Fish.cs" />
     <Compile Include="Models\Location.cs" />
