--- a/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
+++ b/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Interfaces\IFishRepository.cs" />
     <Compile Include="Interfaces\ILocationRepository.cs" />
     <Compile Include="Interfaces\ILureRepository.cs" />
+    <Compile Include="Interfaces\ITackleBoxRepository.cs" />
     <Compile Include="Interfaces\IUserRepository.cs" />
     <Compile Include="Models\BrandDO.cs">
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
@@ -112,6 +113,7 @@
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\TackleBoxRepository.cs" />
     <Compile Include="Repositories\BrandRepository.cs" />
     <Compile Include="Repositories\CatchRepository.cs" />
     <Compile Include="Repositories\FishRepository.cs" />
