--- a/Tests/MeasureMyPike.UnitTests/App.config
+++ b/Tests/MeasureMyPike.UnitTests/App.config
@@ -8,7 +8,7 @@
   </appSettings>
 
   <connectionStrings>
-    <add name="ModelContainer" connectionString="metadata=res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ModelContainer" connectionString="metadata=res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ModelContainer" connectionString="metadata=res://*/Models.MeasureMyPikeModel.csdl|res://*/Models.MeasureMyPikeModel.ssdl|res://*/Models.MeasureMyPikeModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost\SQLEXPRESS;initial catalog=MeasureMyPike;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
 
