--- a/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
+++ b/MeasureMyPike.Domain/MeasureMyPike.Domain.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Interfaces\IBrandRepository.cs" />
     <Compile Include="Interfaces\ICatchRepository.cs" />
     <Compile Include="Interfaces\IFishRepository.cs" />
+    <Compile Include="Interfaces\ILakeRepository.cs" />
     <Compile Include="Interfaces\IMediaRepository.cs" />
     <Compile Include="Interfaces\ILocationRepository.cs" />
     <Compile Include="Interfaces\ILureRepository.cs" />
@@ -69,6 +70,9 @@
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\FishDO.cs">
+      <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\LakeDO.cs">
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\LocationDO.cs">
@@ -114,6 +118,7 @@
       <DependentUpon>MeasureMyPikeModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\LakeRepository.cs" />
     <Compile Include="Repositories\MediaRepository.cs" />
     <Compile Include="Repositories\TackleBoxRepository.cs" />
     <Compile Include="Repositories\BrandRepository.cs" />
