--- a/MeasureMyPike.Web/Web.config
+++ b/MeasureMyPike.Web/Web.config
@@ -13,12 +13,23 @@
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="JwtIssuer" value="MMP" />
+    <add key="JwtAudience" value="localhost:4200" />
+    <add key="JwtLifetimeInSeconds" value="2" />
+    <add key="JwtSecret" value="topofthelinesecretkey" />
   </appSettings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.6" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.2" />
+    <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.5.2" />
-    <httpModules>
-    </httpModules>
+    <httpModules />
   </system.web>
   <system.webServer>
     <handlers>
@@ -28,8 +39,7 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <validation validateIntegratedModeConfiguration="false" />
-    <modules>
-    </modules>
+    <modules />
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
